fixed white space surrounding website

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -36,4 +36,5 @@
 .App {
   background-color: #0C0032;
   color: #ffffff;
+  margin: -8px;
 }
